# emarx

./: .gitignore  Cargo.toml  DISCLAIMER.md  LICENSE  README.md  netlify.toml
data/metadata/: capital-vol-1.json  communist-manifesto.json  critique-gotha-programme.json  eighteenth-brumaire.json  preface-contribution.json  theses-feuerbach.json  value-price-profit.json  wage-labour-capital.json
data/works/: capital-vol-1.json  communist-manifesto.json  critique-gotha-programme.json  eighteenth-brumaire.json  preface-contribution.json  theses-feuerbach.json  value-price-profit.json  wage-labour-capital.json
docs/superpowers/specs/: 2026-04-24-emarx-design.md
scripts/: build_web.py  fetch_texts.py  import_text.py
src/: cli.rs  config.rs  library.rs  main.rs  parser.rs  search.rs  tui.rs
web/: app.js  index.html  styles.css
