[package]
name = "emarx"
version = "0.1.0"
edition = "2021"
description = "Read Marx from the command line."
license = "MIT"
repository = "https://example.invalid/emarx"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
directories = "5.0"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
